--- a/source/_data/author.yml
+++ b/source/_data/author.yml
@@ -1,4 +1,4 @@
 Leon:
   name: Leon Li
-  avatar: /assets/leon-avatar.png
+  avatar: https://avatars.githubusercontent.com/u/4271980?s=64&v=4
   url: https://www.meq.me
